# whatcalendar

./: .gitignore  README.md  __init__.py  display.py  display.service  entry.py  modules.py  pyproject.toml  requirements.txt  setup.py  whatcalendar.service
config/: config_example.json
whatcalendar/: __main__.py  display.py  entry.py  modules.py
