[tool.poetry]
name = "whatcalendar"
version = "0.1.0"
description = "Calendar module for Inky WHat and Raspberry Pi using Google Calendar"
authors = ["novafacing <rowanbhart@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
inky = "^1.3.1"
Pillow = "^9.0.1"
sortedcontainers = "^2.4.0"
google-api-python-client = "^2.36.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
gcsa = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
